# anthropic-cookbook

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  lychee.toml  pyproject.toml  requirements-dev.txt  requirements.txt  revert_platform_urls.py  uv.toml
.claude/commands/: link-review.md  model-check.md  notebook-review.md
.github/slash-commands/: link-review.md
.github/workflows/: claude-link-review.yml  claude-model-check.yml  claude-notebook-review.yml  links.yml  notebook-quality.yml  sast-monitor.yml  security-scan.yml
DeclarativeAgents/OpenAI/: guide.ipynb
RAG/: wikipedia-search-cookbook.ipynb
claude_code_sdk/: .env.example  .gitignore  00_The_one_liner_research_agent.ipynb  01_The_chief_of_staff_agent.ipynb  02_The_observability_agent.ipynb  README.md  pyproject.toml
claude_code_sdk/chief_of_staff_agent/: CLAUDE.md  agent.py  flow_diagram.md
claude_code_sdk/observability_agent/: agent.py  architecture_diagram.md
claude_code_sdk/research_agent/: agent.py  (+1 more)
extended_thinking/: extended_thinking.ipynb  extended_thinking_with_tool_use.ipynb
finetuning/: finetuning_on_bedrock.ipynb
function_calling/: function_calling.ipynb
long_context/: mc_qa.ipynb  pdf_upload_summarization.ipynb  readme.md
misc/: batch_processing.ipynb  building_evals.ipynb  building_moderation_filter.ipynb  claude3_economic_analyst.ipynb  generate_test_cases.ipynb  how_to_enable_json_mode.ipynb  how_to_make_sql_queries.ipynb  mc_qa.ipynb  metaprompt.ipynb  multi_turn_pdf_understanding.ipynb  pdf_upload_summarization.ipynb  prompt_caching.ipynb  read_web_pages_with_haiku.ipynb  sampling_past_max_tokens.ipynb  speculative_prompt_caching.ipynb  using_citations.ipynb  using_citations_gradio_UI.ipynb
multimodal/: getting_started_with_vision.ipynb  how_to_transcribe_text.ipynb  reading_charts_graphs_powerpoints.ipynb  using_sub_agents.ipynb
observability/: usage_cost_api.ipynb
parallel_calling/: README.md  api_request_parallel_processor.py  requirements.txt
patterns/: agents.md  evaluator_optimizer.ipynb  util.py
scripts/: allowed_models.py  check_models.py  validate_all_notebooks.py  validate_notebooks.py
skills/: README.md
tool_evaluation/: evaluation.xml  tool_evaluation.ipynb
tool_use/: calculator_tool.ipynb  customer_service_agent.ipynb  extracting_structured_json.ipynb  function_calling.ipynb  memory_cookbook.ipynb  parallel_tools_claude_3_7_sonnet.ipynb  tool_choice.ipynb  tool_use_with_pydantic.ipynb  vision_with_tools.ipynb  web_search.ipynb
(+172 files in other folders)
