[project]
name = "anthropic-cookbook"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "notebook>=7.2.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "papermill>=2.6.0",
    "nbqa>=1.9.1",
    "nbstripout>=0.7.1",
    "ruff>=0.8.0",
    "pytest>=8.3.3",
    "nbval>=0.11.0",
    "pre-commit>=3.8.0",
]

[tool.uv]
dev-dependencies = [
    "papermill>=2.6.0",
    "nbqa>=1.9.1",
    "nbstripout>=0.7.1",
    "ruff>=0.8.0",
    "pytest>=8.3.3",
    "nbval>=0.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "UP", "S", "B"]
ignore = ["E501", "S101"]  # E501: line too long, S101: assert in tests

[tool.ruff.per-file-ignores]
"skills/**/*.ipynb" = ["S105", "S106"]  # Allow hardcoded passwords in example notebooks

[tool.nbstripout]
extra_keys = [
    "cell.metadata.execution",
    "cell.metadata.pycharm",
    "metadata.widgets"
]